--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="about.css">
 
     <!-- Icono de la página -->
     <link rel="icon" href="icono.png" type="image/png">
@@ -30,23 +30,14 @@
     <section class="section">
         <div class="section-container">
             <div class="content">
-                <p class="subtitle"> ¡Hola! </p>
                 <h1 class="title">
-                    Soy <span> Calogero <br> </span> un dev backend
+                    <span> Sobre mi</span>
                 </h1>
                 <p class="description">
-                    ¡Hola! Soy Calogero, tengo 21 años y soy desarrollador backend junior. Me encanta todo lo relacionado con la tecnología, y disfruto mucho creando y optimizando distintos tipos de sistemas. Me gusta resolver problemas dificiles trabajando por mi cuenta o en equipo. Siempre estoy aprendiendo cosas nuevas y buscando formas de mejorar lo que hago. ¡Estoy listo para cualquier desafío que venga!
-                </p>
-                <div class="btns">
-                    <button class="contact-me"> Contact Me</button>
-                    <button class="my-linkedin"> Mi linkedin</button>
-                </div>
-            </div>
-
+                    Me destaco en tener un enfoque proactivo y colaborativo, dado mi rápido entendimiento de nuevas tecnologías y conceptos, lo que me permite adaptarme rápidamente a diferentes entornos de trabajo. Me desenvuelvo muy bien en el trabajo en equipo, y siempre busco aportar soluciones innovadoras y efectivas. Además, tengo la capacidad de analizar problemas desde múltiples perspectivas, lo que me ayuda a proponer resoluciones bien fundamentadas y adaptadas a las necesidades del proyecto.
             <div class="image">
-                <img src="me.heic" alt="yo" type="image/heic">
+                <img src="fotoprog.jpg " alt="">
             </div>
-        </div>
     </section>
 </body>
 </html>
