--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     ¡Hola! Soy Calogero, tengo 21 años y soy desarrollador backend junior. Me encanta todo lo relacionado con la tecnología, y disfruto mucho creando y optimizando distintos tipos de sistemas. Me gusta resolver problemas dificiles trabajando por mi cuenta o en equipo. Siempre estoy aprendiendo cosas nuevas y buscando formas de mejorar lo que hago. ¡Estoy listo para cualquier desafío que venga!
                 </p>
                 <div class="btns">
-                    <button class="contact-me"> Contact Me</button>
-                    <button class="my-linkedin"> Mi linkedin</button>
+                    <button class="contact-me"><a href="mailto: calubrossy@gmail.com"> Contactame</a></button>
+                    <button class="my-linkedin"><a href="https://www.linkedin.com/in/calogero-brossy-46545518a/?trk=opento_sprofile_topcard" rel="nofollow norefferer">Mi linkedin</a></button>
                 </div>
             </div>
 
